typescript/checker/tests/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers03.ts.stderr
error: Unexpected token Some(RBrace)
 --> $DIR/tests/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers03.ts:2:15
  |
2 | var { "while" } = { while: 1 }
  |               ^

